# BoltEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conandata.yml  conanfile.txt
example/basic/: main.cpp
example/basic/camera/: 2d_test_camera.cpp  2d_test_camera.hpp  test_camera.cpp  test_camera.hpp
example/basic/game_functions/: collision.cpp  collision.hpp  object_generator.cpp  object_generator.hpp
example/basic/game_object/: platform.cpp  platform.hpp  player.cpp  player.hpp
example/basic/layers/: gui_layer.cpp  gui_layer.hpp  gui_render_layer.cpp  gui_render_layer.hpp  test_layer.cpp  test_layer.hpp  test_layer_two.cpp  test_layer_two.hpp
example/shaders/: 2d_player.vert  frag.glsl  frag2.glsl  fragTex.glsl  frag_flat.glsl  frag_lines.glsl  frag_tex.glsl  vert.glsl  vert_flat.glsl  vert_lines.glsl
example/shaders/dino/: dino.frag  dino.vert  platform.frag  platform.vert
example/textures/: color-frame-red.aseprite
example/textures/dino/: platform.aseprite  tree.aseprite
include/OpenGL/: renderer_gl.hpp  shader_gl.hpp  texture_gl.hpp  vertex_gl.hpp  window_gl.hpp
include/Vulkan/: shader_vk.hpp  window_vk.hpp
include/core/: bolt.hpp  core.hpp  manifest.md  primitives.hpp  util.hpp
include/io/: file_system.hpp
include/model/: mesh_builder.hpp  model.hpp
include/render/: model.hpp  renderer_interface.hpp  shader.hpp  shader_interface.hpp  vertex_array.hpp  vertex_array_interface.hpp  window.hpp  window_interface.hpp
scripts/: setup.sh
src/OpenGL/: renderer_gl.cpp  renderer_gl.hpp  shader_gl.cpp  shader_gl.hpp  texture_gl.cpp  texture_gl.hpp  texture_gl.hpp.cpp  vertex_gl.cpp  vertex_gl.hpp  window_gl.cpp  window_gl.hpp
src/Vulkan/: renderer_vk.cpp  renderer_vk.hpp  shader_vk.cpp  shader_vk.hpp  window_vk.cpp  window_vk.hpp
src/core/: application.cpp  application.hpp  bolt.hpp  colors.cpp  colors.hpp  core.hpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.hpp  layer_interface.hpp  log.cpp  log.hpp  primitives.hpp  serializable.hpp  source_location.hpp  stb_image.h  structs.hpp  threadex.cpp  threadex.hpp  util.hpp
src/events/: application_events.hpp  camera_events.hpp  event.hpp  event_caller.cpp  event_caller.hpp  keyboard_events.hpp  mouse_events.hpp  window_events.hpp
src/exceptions/: assertion_exception.cpp  assertion_exception.hpp  bolt_renderer_exception.cpp  bolt_renderer_exception.hpp  exception_interface.hpp  log_exception.cpp  log_exception.hpp  renderer_exception.cpp  renderer_exception.hpp  setup_exception.cpp  setup_exception.hpp  texture_exception.cpp  texture_exception.hpp  wrong_file_extension_exception.cpp  wrong_file_extension_exception.hpp
src/imgui_impl/: imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp
src/interactions/: box_util.hpp  collision.cpp  collision.hpp  hitbox_2d.cpp  hitbox_2d.hpp
src/io/: file_system.cpp  file_system.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/model/: font.cpp  font.hpp  mesh_builder.cpp  mesh_builder.hpp  model.cpp  model_interface.cpp  model_interface.hpp
src/model/types/: font.cpp  font.hpp  line_model.cpp  line_model.hpp  model.cpp  model.hpp  text.cpp  text.hpp
src/primitives/: setup.cpp  setup.hpp  setup_primitives.cpp  setup_primitives.hpp
src/primitives/line/: line.cpp  line.hpp
src/primitives/line/shaders/: frag.glsl
src/primitives/rectangle/: rectangle.cpp  rectangle.hpp
src/primitives/rectangle/shaders/: fragBoth.glsl  fragTexture.glsl  vert.glsl
src/primitives/triangle/: triangle.cpp  triangle.hpp
src/primitives/triangle/shaders/: fragColor.glsl  fragTexture.glsl
src/render/: entity.cpp  entity.hpp  renderer.hpp  renderer_interface.hpp  shader.cpp  window.cpp  window_interface.hpp
src/rendering/OpenGL/: animated_texture_gl.cpp  animated_texture_gl.hpp  buffer_gl.cpp  buffer_gl.hpp  common_texture.cpp  common_texture.hpp  frame_buffer_gl.cpp  frame_buffer_gl.hpp  index_buffer_gl.cpp  index_buffer_gl.hpp  renderer_gl.cpp  renderer_gl.hpp  shader_gl.cpp  shader_gl.hpp  texture_gl.cpp  texture_gl.hpp  vertex_gl.cpp  vertex_gl.hpp  window_gl.cpp  window_gl.hpp
src/rendering/Vulkan/: renderer_vk.cpp  renderer_vk.hpp  shader_vk.cpp  shader_vk.hpp  window_vk.cpp  window_vk.hpp
src/rendering/render/: animation.cpp  animation.hpp  object_creator.cpp  object_creator.hpp  renderer.cpp  renderer.hpp  renderer_interface.hpp  window.cpp  window.hpp  window_interface.hpp
src/scene/: camera.cpp  camera.hpp  camera_2d_base.cpp  camera_2d_base.hpp  camera_base.cpp  camera_base.hpp  scene.cpp  scene.hpp
src/scene/camera/: camera_2d_base.cpp  camera_2d_base.hpp  camera_3d_base.cpp  camera_3d_base.hpp  camera_base.hpp
